VR: Return the floor to being hit-testable

At some point, the floor regressed to be non-hittable.  Mark it as
explicitly hit-testable.

BUG=853822
R=tiborg

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:linux_vr;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Ie8ceda269a3e403c4fbf3eeb46709344d1faa90f
Reviewed-on: https://chromium-review.googlesource.com/1104980
Reviewed-by: Tibor Goldschwendt <tiborg@chromium.org>
Commit-Queue: Christopher Grant <cjgrant@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568174}
Former-commit-id: d7fb3a654ec4f0ef7cc56f965c59f71d7c457558